# lifegraph

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml  test.yml
docs/: CONTRIBUTING.md  api.rst  changelog.md  conf.py  gallery.rst  index.rst  make.bat  tutorial.rst
examples/: GALLERY_HEADER.rst  alife.py  all_sizes.py  grid.py  grid_add_image.py  grid_customization.py  grid_era.py  grid_era_span.py  grid_life_event.py  grid_maxage.py  grid_min_age.py  grid_with_title.py  grid_with_watermark.py  placement.py  provided_axes.py
examples/advanced/: GALLERY_HEADER.rst  plot_provided_axes_mixed.py  plot_provided_axes_multiple.py  plot_provided_axes_single.py  plot_save_load_config.py
examples/complete_example/: GALLERY_HEADER.rst  plot_alife.py
examples/customization/: GALLERY_HEADER.rst  plot_add_image.py  plot_grid_customization.py  plot_placement.py
examples/events_and_eras/: GALLERY_HEADER.rst  plot_era.py  plot_era_span.py  plot_life_event.py
examples/getting_started/: GALLERY_HEADER.rst  plot_grid.py  plot_grid_maxage.py  plot_grid_min_age.py  plot_grid_with_title.py  plot_grid_with_watermark.py
lifegraph/: __init__.py  configuration.py  core.py  lifegraph.py  serialization.py  utils.py
lifegraph/styles/: lifegraph.mplstyle
tests/: test_examples.py  test_lifegraph.py  test_serialization.py
