[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifegraph"
version = "0.1.0"
description = "A package to visualize your life as a grid of weeks."
authors = [
    { name="Kyle Shores", email="kyleshores@gmail.com" }
]
license = "MIT"

readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "matplotlib>=3.0",
    "numpy>=1.17",
    "python-dateutil>=2.8"
]

[project.urls]
Homepage = "https://github.com/kyleshores/Life-Graph"
