[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "lifegraph"
description = "A package to visualize your life as a grid of weeks."
dynamic = [ "version" ]
authors = [
    { name="Kyle Shores", email="kyleshores@gmail.com" }
]
license = "MIT"

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.0",
    "numpy>=1.17",
    "python-dateutil>=2.8"
]

[project.urls]
Homepage = "https://github.com/kyleshores/Life-Graph"

[project.optional-dependencies]

yaml = ["pyyaml>=5.0"]

dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyyaml>=5.1"
]

docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "sphinx-gallery",
]

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

target-version = "py310"  # Adjust to your Python version

[tool.ruff.lint]

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "numpy"